--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "build": "vite build"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "material-design-lite": "^1.3.0",
-    "vue": "^3.0.2",
-    "vue-class-component": "^8.0.0-rc.1"
+    "vue": "^3.0.4",
+    "vue-axios": "3.2.0",
+    "vue-class-component": "^8.0.0-rc.1",
+    "vuex": "4.0.0-rc.2",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.8",
-    "@vue/compiler-sfc": "^3.0.2"
+    "@vue/compiler-sfc": "^3.0.2",
+    "ts-standard": "^10.0.0",
+    "stylus": "^0.54.8",
+    "standard": "16.0.3"
   }
 }
