--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "dependencies": {
     "axios": "^0.21.0",
     "material-design-lite": "^1.3.0",
+    "moment": "^2.29.1",
     "vue": "^3.0.4",
     "vue-axios": "3.2.0",
     "vue-class-component": "^8.0.0-rc.1",
-    "vuex": "4.0.0-rc.2",
-    "moment": "^2.29.1"
+    "vue-pdf-app": "^1.0.0",
+    "vuex": "4.0.0-rc.2"
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.8",
