--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue-axios": "3.2.0",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-pdf-app": "^1.0.0",
-    "vuex": "4.0.0-rc.2"
+    "vuex": "4.0.0-rc.2",
+    "vue-router": "4.0.1"
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.8",
