--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jp-suite",
   "version": "0.0.0",
+  "license": "EUPL-1.2",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
