--- a/jupo-webui/package.json
+++ b/jupo-webui/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-vue": "^1.9.3",
     "moment": "^2.29.1",
     "stylus": "^0.55.0",
-    "vite": "^2.6.4"
+    "vite": "^2.6.4",
+    "vite-plugin-mock": "^2.9.6"
   }
 }
