--- a/jupo-webui/package.json
+++ b/jupo-webui/package.json
@@ -4,9 +4,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "build-pack": "vite build && jszip-cli add --force --output dist/portal.zip dist/apps/portal",
+    "generate-api": "csharp-models-to-typescript --config=tools/cs2ts-config.json"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "material-design-lite": "^1.3.0",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12"
@@ -16,6 +19,8 @@
     "moment": "^2.29.1",
     "stylus": "^0.55.0",
     "vite": "^2.6.4",
-    "vite-plugin-mock": "^2.9.6"
+    "vite-plugin-mock": "^2.9.6",
+    "csharp-models-to-typescript": "^0.21.1",
+    "@ffflorian/jszip-cli": "^2.1.4"
   }
 }
