--- a/jupo-webui/package.json
+++ b/jupo-webui/package.json
@@ -9,20 +9,20 @@
     "generate-api": "csharp-models-to-typescript --config=tools/cs2ts-config.json"
   },
   "dependencies": {
+    "@vueuse/core": "^7.3.0",
     "axios": "^0.24.0",
     "material-design-lite": "^1.3.0",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@ffflorian/jszip-cli": "^2.1.4",
     "@vitejs/plugin-vue": "^1.9.3",
+    "csharp-models-to-typescript": "^0.21.1",
     "moment": "^2.29.1",
     "stylus": "^0.55.0",
-    "vite": "^2.6.4",
-    "vite-plugin-mock": "^2.9.6",
-    "csharp-models-to-typescript": "^0.21.1",
-    "@ffflorian/jszip-cli": "^2.1.4",
     "ts-standard": "^10.0.0",
-    "standard": "16.0.3"
+    "vite": "^2.6.4",
+    "vite-plugin-mock": "^2.9.6"
   }
 }
