--- a/jupo-webui/package.json
+++ b/jupo-webui/package.json
@@ -27,6 +27,7 @@
     "csharp-models-to-typescript": "^0.21.1",
     "moment": "^2.29.1",
     "stylus": "^0.55.0",
+    "rollup-plugin-sri": "^1.3.4",
     "ts-standard": "^10.0.0",
     "vite": "^2.6.4",
     "vite-plugin-mock": "^2.9.6"
