Hinzufügen von vitest und Testfällen

--- a/.github/workflows/buildtask.yml
+++ b/.github/workflows/buildtask.yml
@@ -15,3 +15,5 @@ jobs:
       - name: build SPA
         working-directory: ./jupo-webui
         run: npm run build
+      - name: run tests
+        run: npm run test:once
