--- a/jupo-webui/package.json
+++ b/jupo-webui/package.json
@@ -10,6 +10,8 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
+    "test": "vitest --dom",
+    "test:once": "vitest run --dom",
     "build-pack": "vite build && jszip-cli add --force --output dist/portal.zip dist/",
     "generate-api": "csharp-models-to-typescript --config=tools/cs2ts-config.json"
   },
@@ -24,12 +26,16 @@
   "devDependencies": {
     "@ffflorian/jszip-cli": "^3.1.6",
     "@vitejs/plugin-vue": "^1.9.3",
+    "@vitest/coverage-c8": "^0.24.3",
+    "@vue/test-utils": "^2.1.0",
     "csharp-models-to-typescript": "^0.21.1",
+    "happy-dom": "^7.5.12",
     "moment": "^2.29.4",
-    "stylus": "^0.55.0",
     "rollup-plugin-sri": "^1.3.4",
+    "stylus": "^0.55.0",
     "ts-standard": "^10.0.0",
     "vite": "^2.9.13",
-    "vite-plugin-mock": "^2.9.6"
+    "vite-plugin-mock": "^2.9.6",
+    "vitest": "^0.24.3"
   }
 }
