--- a/.github/workflows/buildtask.yml
+++ b/.github/workflows/buildtask.yml
@@ -8,7 +8,6 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.4.1
-      - run: npm -v
       - name: install dependencies 
         working-directory: ./jupo-webui
         run: npm ci
@@ -16,4 +15,5 @@ jobs:
         working-directory: ./jupo-webui
         run: npm run build
       - name: run tests
+        working-directory: ./jupo-webui
         run: npm run test:once
