--- a/.github/workflows/buildtask.yml
+++ b/.github/workflows/buildtask.yml
@@ -22,7 +22,6 @@ jobs:
     needs: setup-project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3.4.1
       - uses: actions/cache@v3.0.11
         id: restore-deps
@@ -32,13 +31,16 @@ jobs:
       - name: build SPA
         working-directory: ./jupo-webui
         run: npm run build
+      - uses: actions/upload-artifact@v3
+        with:
+          name: builded-SPA
+          path: jupo-webui/dist/
 
   test-project:
     name: test components
     needs: setup-project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3.4.1
       - uses: actions/cache@v3.0.11
         id: restore-deps
