--- a/jupo-webui/package.json
+++ b/jupo-webui/package.json
@@ -12,6 +12,7 @@
     "serve": "vite preview",
     "test": "vitest --dom",
     "test:once": "vitest run --dom",
+    "lint": "ts-standard --fix",
     "build-pack": "vite build && jszip-cli add --force --output dist/portal.zip dist/",
     "generate-api": "csharp-models-to-typescript --config=tools/cs2ts-config.json"
   },
@@ -33,9 +34,20 @@
     "moment": "^2.29.4",
     "rollup-plugin-sri": "^1.3.4",
     "stylus": "^0.55.0",
-    "ts-standard": "^10.0.0",
+    "ts-standard": "^12.0.1",
     "vite": "^2.9.13",
     "vite-plugin-mock": "^2.9.6",
     "vitest": "^0.24.3"
+  },
+  "ts-standard": {
+    "ignore": [
+      "dist",
+      "npm_modules",
+      "src/**/*.js"
+    ],
+    "files": [
+      "src/**/*.{ts,ejs}",
+      "*.ts"
+    ]
   }
 }
