--- a/jupo-webui/package.json
+++ b/jupo-webui/package.json
@@ -17,13 +17,13 @@
   },
   "dependencies": {
     "@vueuse/core": "^7.3.0",
-    "axios": "^0.24.0",
     "material-design-lite": "^1.3.0",
-    "pdfjs-dist": "^2.12.313",
-    "vue": "^3.2.26",
-    "vue-router": "^4.0.12"
+    "pdfjs-dist": "^2.12.313"
   },
   "devDependencies": {
+    "vue": "^3.3.4",
+    "vue-router": "^4.0.12",
+	"axios": "^1.4.0",
     "@ffflorian/jszip-cli": "^3.1.6",
     "@vitejs/plugin-vue": "^1.9.3",
     "@vitest/coverage-c8": "^0.24.3",
@@ -33,9 +33,9 @@
     "moment": "^2.29.4",
     "rollup-plugin-sri": "^1.3.4",
     "stylus": "^0.55.0",
-    "ts-standard": "^10.0.0",
-    "vite": "^2.9.13",
+    "ts-standard": "^12.0.2",
+    "vite": "^4.3.8",
     "vite-plugin-mock": "^2.9.6",
-    "vitest": "^0.24.3"
+    "vitest": "^0.31.1"
   }
 }
